# TNG033

./: README.md
Labb1/: CMakeLists.txt  doctest.hpp  set.cpp  set.hpp
Labb2/: expression.cpp  expression.h  logarithm.cpp  logarithm.h  polynomial.cpp  polynomial.h
Labb3/Ex1/: Source.cpp
Labb3/Ex1/Debug/: vc141.idb
Labb3/Ex1/Debug/Ex1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Ex1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Labb3/Ex1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Labb3/Ex2/: Source.cpp
Labb3/Ex2/Debug/: vc141.idb
Labb3/Ex2/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Labb3/Ex2/uppgift2/: uppgift2_kort.txt  uppgift2_kort_out.txt
